--- a/实现方案.md
+++ b/实现方案.md
@@ -1,3 +1,7 @@
 # 实现方案
 
 使用vmware自带的接口传递vnc数据到springboot服务，再由springboot使用websockify组件将vnc转换为websocket协议转发给vue前端
+
+## 后端
+
+接收来自vmware的vnc数据，使用websockify组件将vnc转换为websocket协议转发给前端
