--- a/实现方案.md
+++ b/实现方案.md
@@ -1,7 +1,11 @@
 # 实现方案
 
-使用vmware自带的接口传递vnc数据到springboot服务，再由springboot使用websockify组件将vnc转换为websocket协议转发给vue前端
+使用docker创建一个小型桌面操作系统(ubuntu)，并使用VNC进行远程访问
 
-## 后端
+通过后端访问 VNC 接口并将其转换为 WebSocket 传给 Vue 前端，此处需要一个中间层来实现
 
-接收来自vmware的vnc数据，使用websockify组件将vnc转换为websocket协议转发给前端
+VNC 和 WebSocket 之间的桥接。这个过程分为几个主要步骤：
+
+1. VNC 到 WebSocket 的转换：你需要一个服务器将 VNC 协议转换为 WebSocket 协议，通常通过一个像 noVNC 这样的工具来完成。
+2. 后端与前端的 WebSocket 通信：后端（Spring Boot）需要通过 WebSocket 将转换后的数据传递给前端（Vue）。
+3. 前端展示：Vue 前端需要通过 WebSocket 接收来自后端的数据并渲染到页面。
